[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "PKINITtools"
version = "0.1.0"
description = "Tools for PKINIT in Kerberos"
authors = [{ name = "Dirkjan Mollema" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "asn1crypto",
    "pyasn1",
    "pycryptodomex",
    "minikerberos",
]
requires-python = ">=3.7"

[project.scripts]
pkinit-kerberos = "pkinit_kerberos:main"
